--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,5 @@
     <string name="next">Next</string>
     <string name="question">Survey Question</string>
     <string name="survey_entry">These is a mandatory survey which helps us to know your health situation. Do you want to take it now?</string>
-    <string name="end_survey">You want to take this MANDATORY survey next time?</string>
+    <string name="end_survey">Do you want to skip this survey?</string>
 </resources>
