--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <!--Survey-->
     <string name="previous">Previous</string>
     <string name="next">Next</string>
-    <string name="question">Pre-evaluation Survey</string>
+    <string name="question">Pre-Evaluation Survey</string>
     <string name="survey_entry">These is a mandatory survey which helps us to know your health situation. Do you want to take it now?</string>
     <string name="end_survey">Do you want to skip this survey?</string>
 </resources>
